NXP-32866: Rename audit packages